# CappaMart

./: .breakpoints  about.html  cappaBucks.html  cart.html  gambling.html  index.html  main.py  package-lock.json  package.json  pyproject.toml  store.html  style.css  template.html  test.html  testing.html
about/: casper.html  luke.html  noah.html  sam.html
about-us/: about-casper.html  about-sam.html
products/: banan.html  buke.html  casper-on-mount-everest.html  casper-walk.html  casper.html  cibble-bot.html  deep-fried-casper.html  deshomanwhop.html  edimflomaexpokis.html  group-photo.html  group-walk.html  image.html  john-mews.html  john-mugshot.html  moo.html  niv-fish.html  niv-jumpscare.html  niv-meme.html  niv-posing.html  niv.html  noah's-xray.html  open-mouth-niv.html  products.json  puff.html  scrom-doglin.html  shawakinspeil.html  sophisticated-cappa.html  taran-waloukoukh-aethelfart.html  thom.html  three-egg-in-the-pan.html  uhleamaekluwpole.html  wiener-sandwich.html
scripts/: cart.js  cartTest.js  clicker.js  footer.js  gambling.js  head.js  main.js  nav.js  products.js  productsFeatured.js  productsNew.js  productsPopular.js  replacerTemplate.js  test.js
templates/: cartItem.html  footer.html  head.html  nav.html  productDisplay.html  productPage.html  products.html  productsFeatured.html  productsNew.html  productsPopular.html
