[tool.poetry]
name = "repl-html-cappamart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_cappamart"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
